# QThreadExample

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Day7.pro  Day7.sln  Day7.vcxproj  Day7.vcxproj.filters  Day7_automoc.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_sortdialog.cpp  moc_workerthread.cpp  sortdialog.cpp  sortdialog.h  sortdialog.ui  ui_mainwindow.h  ui_sortdialog.h  workerthread.cpp  workerthread.h
Day7.dir/Debug/Day7.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Day7.dir/Release/Day7.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: Day7.ilk
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.write.1.tlog
Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.read.1.tlog
