CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT( "Day7" )
 
# set(CMAKE_PREFIX_PATH C:/Qt/5.3/msvc2013)
#32-bit because , my vs is 32 bit application 
 set(CMAKE_PREFIX_PATH C:/Qt/5.3/msvc2013)
 FIND_PACKAGE( Qt5Core)
 FIND_PACKAGE(Qt5Widgets)
 FIND_PACKAGE(Qt5Gui)
 FIND_PACKAGE(Qt5Sql)
FIND_PACKAGE(Qt5Xml)
FIND_PACKAGE(Qt5XmlPatterns)
FIND_PACKAGE(Qt5Network )
 #FIND_PACKAGE( Qt5Sql)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 SET( CMAKE_AUTOMOC ON)
 INCLUDE_DIRECTORIES(
 ${CMAKE_CURRENT_BINARY_DIR}
 ../include
 )
 SET( INCS
mainwindow.h
workerthread.h
sortdialog.h
 )
 



 SET( SRCS
main.cpp
mainwindow.cpp
sortdialog.cpp
workerthread.cpp
 )
 SET( GUIS
mainwindow.ui
sortdialog.ui)
 QT5_WRAP_UI( GUI_SRCS
 ${GUIS}
 )
 ADD_EXECUTABLE( ${PROJECT_NAME}
 ${INCS}
 ${SRCS}
 ${GUI_SRCS}
 )
 #QT5_USE_MODULES -> old cmake , TARGET_LINK_LIBRARIES -> new cmake 
 #QT5_USE_MODULES( ${PROJECT_NAME} Widgets Gui Sql Xml Xmlpatterns Network )
#  QT5_USE_MODULES( ${PROJECT_NAME} Sql)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Widgets)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Gui)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Core)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Sql)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Xml)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::XmlPatterns)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Network)